navigation mobile fix

--- a/Portfolio-xd-version-html/main.css
+++ b/Portfolio-xd-version-html/main.css
@@ -123,7 +123,7 @@ body {
   margin:0em;
   padding: 0em;
   display: flex;
-  
+  position: absolute;
   align-items: center;
   width: 100%;
   height: 60px;
